# interviewer

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
core/: __init__.py  agent.py  prompts.py  runnables.py  utils.py
notebooks/: main.ipynb
schemas/: __init__.py  llm_responses.py  schema.py
service/: service.py  utils.py
